welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while(x=0){
       ^